# -LAUNCH-unified-platform-MVP

./: .env.example  .env.preview  .gitignore  .vercelignore  ADDITIONAL_TESTS_REPORT.md  ANTI_SNIPER_FLOW.md  API_AND_FUNCTIONS_PLAN.md  APPWRITE_DATABASE_INDEXES.md  APPWRITE_INTEGRATION_STATUS.md  APPWRITE_SCHEMA_COMPLETE.md  ARCHITECTURE_CHANGES_SUMMARY.md  ARCHITECTURE_IMPLEMENTATION_GUIDE.md  AUDIT.md  AUDIT_REPORT.csv  AUTHENTICATION_FIXES.md  BACKLOG_ENHANCEMENTS_COMPLETE.md  BLAST_APPWRITE_SETUP.md  BLAST_CRON_SETUP_GUIDE.md  BLAST_LAUNCH_SUCCESS.md  BLAST_MASTER_PLAN.md  BLAST_PRODUCTION_STATUS.md  BLAST_SECURITY_AUDIT.md  BLAST_SETUP_GUIDE.md  BLAST_TEST_ANALYSIS.md  BLAST_TEST_RESULTS.md  BTDEMO_BEFORE_AFTER_EXAMPLES.md  BTDEMO_DESIGN_CHANGES_LOG.md  BTDEMO_DESIGN_SPECIFICATION.md  BTDEMO_IMPLEMENTATION_PLAN.md  BTDEMO_MIGRATION_SUMMARY.md  BTDEMO_PRODUCTION_SUMMARY.md  BTDEMO_QUICK_REFERENCE.md  BTDEMO_ROLLOUT_COMPLETE.md  BTDEMO_ROLLOUT_FINAL.md  BTDEMO_ROLLOUT_PLAN.md  BTDEMO_SECTIONS_1-3_VISUAL_GUIDE.md  BUNDLE_ANALYSIS_PARTIAL.md  BUTTON_ARCHITECTURE_SPEC.md  BUTTON_AUDIT_REPORT.md  BUTTON_SYSTEM_SUMMARY.md  (+157 more)
.claude/: AGENT_MANAGEMENT_RULES.md  CONTEXT_REFRESH_CHECKLIST.md  DESIGN_RULES.md  PERFORMANCE_IMPROVEMENT_NOTES.md
.github/: PRIVY_QUICK_REFERENCE.md
app/: globals.css  home-page.tsx  layout.tsx  page.tsx
components/: ActionCard.tsx  ActivitiesFeed.tsx  ActivityCard.tsx  AdvancedTableView.tsx  AnimatedBackground.tsx  (+60 more)
solana-program/programs/launchos-escrow/: Cargo.toml
solana-program/programs/launchos-escrow/src/: errors.rs  lib.rs  state.rs
(+1023 files in other folders)
