[package]
name = "launchos-escrow"
version = "0.1.0"
description = "LaunchOS Escrow Program for USDC payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchos_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
